style revised accrding to pat, links given to hompage hrefs, screen s… (#5)
* style revised accrding to pat, links given to hompage hrefs, screen size adjustments finished

* footer fix

Co-authored-by: Hjkun77 <harveyjaysison@gmail.com>

--- a/public/src/stylesheets/styles.css
+++ b/public/src/stylesheets/styles.css
@@ -31,6 +31,7 @@ nav {
     top: 5vh;
     right: 5vw;
     cursor: pointer;
+    margin: 0 16px;
 }
 
 .bar1,
@@ -126,12 +127,19 @@ footer {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-top: 50px;
+    padding: 0 30px;
+    margin-top: 30px;
 }
 
 .footerSubContent {
     display: flex;
     flex-direction: column;
+    margin-left: 5px;
+    padding: 0 16px;
+}
+
+.footerSubContent label {
+    text-align: center;
 }
 
 .footerIcons {
@@ -169,7 +177,6 @@ footer {
     max-width: 100%;
     padding-top: 100px;
     margin-top: 70px;
-    ;
     background: url("../assets/images/bantay 1.png");
     background-size: cover;
 }
@@ -177,14 +184,14 @@ footer {
 .main_content {
     width: 30%;
     height: 40%;
-    margin: 20vh 0 20vh 10vw;
+    margin: 15vh 0 25vh 10vw;
     font-size: 1.7em;
     font-family: 'Open Sans', sans-serif;
     color: #3C4B9D;
 }
 
 .main_content img {
-    width: 40vw;
+    width: 25vw;
     margin-bottom: 10px;
 }
 
@@ -204,18 +211,22 @@ footer {
     width: 50vw;
     height: 480px;
     max-width: 50%;
-    padding: 0 5vw;
+    padding: 0 8vw;
     background: #EC625D;
 }
 
-.helpdesk_content h1,
-p {
+.helpdesk_content p {
     font-family: 'Open Sans', sans-serif;
     color: white;
+    line-height: 22px;
 }
 
 .helpdesk_content h1 {
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    margin-top: 0;
     margin-bottom: 0;
+    line-height: 40px;
 }
 
 .helpdesk_content button {
@@ -254,18 +265,22 @@ p {
     width: 50vw;
     height: 480px;
     max-width: 50%;
-    padding: 0 5vw;
+    padding: 0 8vw;
     background: #3C4B9D;
 }
 
-.survey_content h1,
-p {
+.survey_content p {
     font-family: 'Open Sans', sans-serif;
     color: white;
+    line-height: 22px;
 }
 
 .survey_content h1 {
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    margin-top: 0;
     margin-bottom: 0;
+    line-height: 40px;
 }
 
 .survey_content button {
@@ -1004,7 +1019,7 @@ p {
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 375px) {
     .navLogo {
         margin-right: 60vw;
     }
