--- a/public/src/stylesheets/styles.css
+++ b/public/src/stylesheets/styles.css
@@ -135,7 +135,12 @@ footer {
     display: flex;
     flex-direction: column;
     margin-left: 5px;
-    padding: 0 16px;
+    <<<<<<< HEAD=======padding: 0 16px;
+}
+
+.footerSubContent label {
+    text-align: center;
+    >>>>>>>adf58cb629d538027fb260d766ec5a22bc95eee6
 }
 
 .footerSubContent label {
@@ -820,6 +825,97 @@ footer {
 }
 
 /*************************************************************************************************************/
+
+
+/*************************************************************************************************************/
+/*TEAM*/
+/*************************************************************************************************************/
+.teams_header {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 140px;
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../assets/images/about_bantaybayan.png");
+    background-position: center;
+}
+
+.teams_header h1 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 24px;
+    line-height: 33px;
+    color: #FFFFFF;
+    margin-left: 8vw;
+}
+
+/*************************************************************************************************************/
+/*Structure Section*/
+.teams_structure {
+    width: 100vw;
+    max-width: 100%;
+    background: white;
+}
+
+.teams_structure_body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.teams_structure_body img {
+    width: 90vw;
+    margin: 80px 0;
+}
+
+/*************************************************************************************************************/
+/*GoodGovPH and DSC Section*/
+.team {
+    width: 100%;
+}
+
+.team_members {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 90%;
+    padding: 5%;
+}
+
+.member {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 260px;
+    height: 230px;
+    margin: 20px 0;
+}
+
+.member img {
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.member h3 {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
+    color: #4F4F4F;
+    margin-bottom: 0;
+}
+
+.member h5 {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    font-size: 10px;
+    line-height: 20px;
+    color: #3C4B9D;
+    margin-top: 0;
+}
+
+/*************************************************************************************************************/
 @media screen and (max-width: 1330px) {
 
     .partner_subcontent1,
@@ -1016,6 +1112,12 @@ footer {
     .citizen_mobilization_card3,
     .citizen_mobilization_card4 {
         width: 98%;
+    }
+
+    /*TEAM SETTINGS*/
+
+    .teams_structure {
+        display: none;
     }
 }
 
