--- a/public/src/stylesheets/styles.css
+++ b/public/src/stylesheets/styles.css
@@ -77,7 +77,7 @@ nav {
     width: 220px;
     min-height: 130px;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    z-index: 1;
+    z-index: 2;
 }
 
 .formsdrop a {
@@ -294,9 +294,7 @@ footer {
 
 .survey_pic {
     width: 50vw;
-    height: auto;
     max-width: 50%;
-    margin-top: -98.7px;
 }
 
 /*************************************************************************************************************/
@@ -331,8 +329,8 @@ footer {
     font-weight: bold;
     text-align: center;
     color: white;
-    background-color: #EC625D;
-    border: 1px solid #EC625D;
+    background-color: #EC403D;
+    border: 1px solid #EC403D;
     border-radius: 8px;
     text-decoration: none;
     padding: 16px 32px;
@@ -952,11 +950,17 @@ footer {
         display: block;
     }
 
-    .about:hover+.aboutdrop,
-    .forms:hover+.formsdrop,
-    .faqs:hover+.faqsdrop,
-    .contact:hover+.contactdrop {
-        display: none;
+    .formsdrop{
+        width: 100vw;
+        height: 59vh;
+        top: 41vh;
+        left: 0;
+        right: 0;
+    }
+
+    .formsdrop a:hover {
+        color: #2A3B91;
+        background-color: white;
     }
 
     .page_menu {
