Tanzell  team page (#9)
* with team html

* team page almost done (pics lacking)

* complete DSC pics

* Complete DSC pics

Co-authored-by: Hjkun77 <harveyjaysison@gmail.com>

--- a/public/src/stylesheets/styles.css
+++ b/public/src/stylesheets/styles.css
@@ -151,6 +151,10 @@ footer {
     text-align: center;
 }
 
+.footerSubContent label {
+    text-align: center;
+}
+
 .footerIcons {
     display: flex;
     justify-content: center;
