first revision: homepage, aboutpage, teampage, contactpage. missing primer link and primer

--- a/public/src/stylesheets/contact.css
+++ b/public/src/stylesheets/contact.css
@@ -120,13 +120,17 @@ form button:hover {
 
 .flex-images {
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
+    justify-content: center;
     margin-bottom: 60px;
 }
 
 .flex-images img {
+    width: 85px;
+    height: 85px;
     margin: 16px;
+    object-fit: contain;
+    border-radius: 50%;
 }
 
 #contact-details h2 {
@@ -135,8 +139,8 @@ form button:hover {
     font-weight: bold;
     font-size: 14px;
     line-height: 25px;
-    color: #3C4B9D;
-    margin: 0;
+    color: #828282;
+    margin: 15px 0 0 0;
 }
 
 #contact-details p {
@@ -157,7 +161,7 @@ form button:hover {
     line-height: 25px;
     /* or 179% */
     margin: auto;
-    color: #4F4F4F;
+    color: #3C4B9D;
 }
 
 #social-media {
