--- a/public/src/stylesheets/faqs.css
+++ b/public/src/stylesheets/faqs.css
@@ -1,10 +1,34 @@
-#faqs-wrapper {
-    width: 75%;
-    margin: auto;
-    padding: 60px;
+body{
+    height: 2000px;
 }
 
-#faqs-wrapper h4 {
+cite{
+    font-size: 11px;
+}
+
+.block-quote{
+    padding: 0 30px; 
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 15px;
+}
+
+.sidebar{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 23%;
+    background-color: #F8F8F8;
+    padding: 0 2% 0 5%;
+}
+
+
+.sidebar_bantay{
     font-family: Open Sans;
     font-style: normal;
     font-weight: bold;
@@ -12,14 +36,14 @@
     line-height: 40px;
     color: #EB5757;
     text-transform: uppercase;
-    margin: 0;
+    margin: 40px 0 0 0;
 }
 
-#faqs-wrapper span {
+.sidebar_bantay span {
     color: #3C4B9D
 }
 
-#faqs-wrapper h1 {
+.sidebar h1 {
     font-family: Open Sans, sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -29,42 +53,81 @@
     color: #333333;
 }
 
+.sidebar_list{
+    padding-right: 44px;
+    border-right: 1px solid #828282;
+}
+
+.sidebar_categories{  
+    display: inline-block;  
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 40px;
+    color: #828282;
+    margin: 0;
+    border-bottom: 2px solid #2A3B91;
+}
+
+.sidebar_contents{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    list-style-type: none;
+    padding: 20px 0 0;
+}
+
+.sidebar_contents li{
+    margin-bottom: 10px;
+}
+
+.sidebar_content:hover{
+    color: black;
+    text-decoration: underline;
+}
+
+.sidebar_content{
+    color: #4F4F4F;
+    font-family: Open Sans;
+    font-size: 14px;
+}
+
+/*FAQs*/
+
 #faq-flex {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    width: 70%;
+    padding-top: 90px;
+    margin-left: 30%;
+
 }
 
 .faq-container {
     margin: 16px;
-    width: 50%;
+    width: 100%;
 }
 
 .faq-container h2 {
-    font-family: Assistant;
+    font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
-    line-height: 196.2%;
-    /* or 47px */
-
+    line-height: 47px;
     display: flex;
     align-items: center;
-    letter-spacing: 0.03em;
-
-    /* Gray 3 */
-
-    color: #828282;
-    margin: 0;
+    letter-spacing: 0.03em;    
+    color: #2A3B91;
+    margin-top: 40px;
 }
+
 
 .faq-box {
     margin: 16px 0;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
     border-radius: 4px;
-    font-family: Assistant;
-    font-style: normal;
-    font-weight: normal;
     font-size: 14px;
     line-height: 27px;
     letter-spacing: 0.03em;
@@ -75,8 +138,24 @@
 .faq-box header {
     padding: 16px 24px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+}
+
+.faq-subnum{
+    font-family: 'Open Sans', sans-serif;
+    align-self: flex-start;
+    color: #2A3B91;
+    font-weight: 700;
+    margin: 15px;
+}
+
+.faq-header-content{
+    width: 90%;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    line-height: 27px;
+    letter-spacing: 0.03em;
+    color: #333333;
 }
 
 .faq-box .body {
@@ -99,11 +178,26 @@
 }
 
 @media screen and (max-width: 768px) {
-    #faq-flex {
+    .sidebar{
+        display: flex;
         flex-direction: column;
+        position: static;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background-color: #F8F8F8;
+        padding: 100px 5% 0;
+        box-sizing: border-box;
     }
 
-    .faq-container {
+    .sidebar_list{
+        padding-right: 0;
+        border-right: 0;
+    }
+
+    #faq-flex {
+        margin: 0;
+        padding: 0;
         width: 100%;
     }
 }
